권환 관리 수정