@@ -1,50 +1,56 @@
-    package org.example.courseplate.security;
+package org.example.courseplate.security;
 
-    import jakarta.servlet.FilterChain;
-    import jakarta.servlet.ServletException;
-    import jakarta.servlet.http.HttpServletRequest;
-    import jakarta.servlet.http.HttpServletResponse;
-    import lombok.RequiredArgsConstructor;
-    import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-    import org.springframework.security.core.context.SecurityContextHolder;
-    import org.springframework.security.core.userdetails.User;
-    import org.springframework.util.StringUtils;
-    import org.springframework.web.filter.OncePerRequestFilter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.util.StringUtils;
+import org.springframework.web.filter.OncePerRequestFilter;
 
-    import java.io.IOException;
-    import java.util.Collections;
+import java.io.IOException;
+import java.util.List;
 
-    @RequiredArgsConstructor
-    public class JwtAuthenticationFilter extends OncePerRequestFilter {
+@RequiredArgsConstructor
+public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
-        private final JwtUtil jwtUtil;
+    private final JwtUtil jwtUtil;
 
-        @Override
-        protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
-                throws ServletException, IOException {
+    @Override
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
+            throws ServletException, IOException {
 
-            String token = getJwtFromRequest(request);
+        String token = getJwtFromRequest(request);
 
-            if (StringUtils.hasText(token) && jwtUtil.isTokenValid(token)) {
-                String userId = jwtUtil.validateToken(token);
+        if (StringUtils.hasText(token) && jwtUtil.isTokenValid(token)) {
+            String userId = jwtUtil.validateToken(token);
+            String role = jwtUtil.getRoleFromToken(token);
 
-                // 스프링 시큐리티 인증 설정
-                User user = new User(userId, "", Collections.emptyList());
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(user, null, user.getAuthorities());
-                SecurityContextHolder.getContext().setAuthentication(authentication);
-            }
+            // 역할(Role)을 GrantedAuthority로 변환
+            List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(role));
 
-            chain.doFilter(request, response);
+            // 사용자 객체 생성 (권한 포함)
+            User user = new User(userId, "", authorities);
+            UsernamePasswordAuthenticationToken authentication =
+                    new UsernamePasswordAuthenticationToken(user, null, user.getAuthorities());
+
+            // Spring Security의 SecurityContext에 인증 정보 저장
+            SecurityContextHolder.getContext().setAuthentication(authentication);
         }
 
-        private String getJwtFromRequest(HttpServletRequest request) {
-            String bearerToken = request.getHeader("Authorization");
-            if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
-                String token = bearerToken.substring(7);
-                return token;
-            }
-            return null;
-        }
-
+        chain.doFilter(request, response);
     }
+
+    private String getJwtFromRequest(HttpServletRequest request) {
+        String bearerToken = request.getHeader("Authorization");
+        if (StringUtils.hasText(bearerToken) && bearerToken.startsWith("Bearer ")) {
+            return bearerToken.substring(7);
+        }
+        return null;
+    }
+}
